--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,7 +29,7 @@ li {
   color: #F82690;
 }
 
-a {
+li a {
   font-family: 'Coming Soon', cursive;
   padding-left: 145px;
   text-decoration: none;
@@ -58,10 +58,9 @@ img {
 
 /*secciones*/
 .secciones {
-  display: inline-block;
-  width: 500px;
+  display: block;
   margin-top: 20px;
-  margin-left: 125px;
+  margin-left: 60px;
 }
 
 .secciones div{
@@ -69,9 +68,39 @@ img {
   text-align: center;
   color: # #FB7293;
   font-family: 'Coming Soon', cursive;
-  padding: 10px;
+  padding: 10px 130px;
+  display: inline-block;
+  margin-left: 40px;
+  position: relative;
+}
+.seccionesArticulo{
+    display: inline-block;
+    visibility: hidden;
+    margin-left: 125px;
+    width: 500px;
+    text-align: justify;
+    font-family: 'Coming Soon', cursive;
+    margin-top: 30px;
 }
 
-.secciones article {
-  text-align : justify;
+.close {
+  position: absolute;
+  /*top: 140px;
+  left: 360px;*/
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+  color: black;
+}
+
+.close:hover,
+ .close:focus {
+   color: #bbb;
+   text-decoration: none;
+   cursor: pointer;
+ }
+
+.secciones div a {
+  padding: 10px 20px;
 }
